# substrate-examples

./: .gitignore  README.md  pyproject.toml
_internal/: README.md  marketing.py
_internal/_template/: README.md
_internal/_template/python/: README.md  example.py  pyproject.toml
_internal/_template/typescript/: README.md  example.ts  package-lock.json
_internal/hero_image/: README.md  marketing.py  pyproject.toml
basics/: README.md
basics/generate-sql/: README.md
basics/generate-sql/python/: README.md  pyproject.toml
basics/generate-sql/python/src/generatesql/: example.py  transactions.csv  users.csv
basics/generate-sql/typescript/: README.md  example.ts  package.json  transactions.json  users.json
basics/generate-text/: README.md  diagram.d2
basics/generate-text/python/: README.md  example-multi.py  pyproject.toml
basics/generate-text/python/src/generatetext/: example.py
basics/generate-text/typescript/: README.md  example-multi.ts  example.ts  package.json  tsconfig.json
basics/streaming/: README.md
basics/streaming/python/console/: main.py
basics/streaming/python/quotes-fastapi/: main.py
basics/streaming/python/quotes-fastapi/static/: index.html  script.js
basics/streaming/python/quotes-flask/: README.md  main.py  pyproject.toml
basics/streaming/typescript/console/: README.md  non-streaming.js
basics/streaming/typescript/quotes-express/: README.md  package-lock.json  server.js
basics/streaming/typescript/quotes-express/static/: index.html  script.js
basics/streaming/typescript/quotes-nextjs/: README.md
basics/streaming/typescript/quotes-nextjs/app/: layout.tsx
basics/streaming/typescript/quotes-nodejs/: README.md  package.json  server.js
basics/streaming/typescript/quotes-nodejs/static/: script.js
techniques/: README.md
techniques/embed-documents/: README.md
techniques/embed-documents/python/src/python/: example.py
techniques/embed-documents/typescript/: example.ts
techniques/rag/python/src/python/: example.py
techniques/rag/typescript/: example.ts  tsconfig.json
techniques/sentiment-analysis/: README.md  diagram.d2
techniques/sentiment-analysis/python/src/python/: example.py
techniques/sentiment-analysis/typescript/: example.ts
techniques/skeleton-of-thought/: README.md
techniques/skeleton-of-thought/python/: pyproject.toml
techniques/skeleton-of-thought/python/src/python/: example.py
techniques/skeleton-of-thought/typescript/: example.ts  package-lock.json  package.json
techniques/tree-of-thought/: README.md  diagram.d2
techniques/tree-of-thought/python/src/python/: example.py
techniques/tree-of-thought/typescript/: example.ts  package-lock.json  package.json
tutorials/: README.md
tutorials/chat-with-an-llm/: README.md
tutorials/chat-with-an-llm/python/: pyproject.toml
tutorials/chat-with-an-llm/python/src/: example.py
tutorials/chat-with-an-llm/python/src/python/: example.py
tutorials/chat-with-an-llm/typescript/: example.ts  main.js  package-lock.json  package.json
tutorials/streaming/python/console/: pyproject.toml
tutorials/streaming/python/quotes-fastapi/: README.md  pyproject.toml
tutorials/streaming/python/quotes-flask/static/: script.js
tutorials/streaming/python/quotes-flask/templates/: index.html
tutorials/streaming/typescript/console/: package-lock.json  package.json  streaming.js
tutorials/streaming/typescript/quotes-express/: package.json
tutorials/streaming/typescript/quotes-multinode-nodejs/: server.js
tutorials/streaming/typescript/quotes-nextjs/: package-lock.json  package.json
tutorials/streaming/typescript/quotes-nextjs/app/: Example.tsx  page.tsx
tutorials/streaming/typescript/quotes-nextjs/app/quote/: route.ts
tutorials/streaming/typescript/quotes-nodejs/: package-lock.json
