[tool.poetry]
name = "hero-image"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
marimo = "^0.8.0"
substrate = "^220240617.1.8"
pillow = "^10.4.0"
numpy = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
