[tool.poetry]
name = "quotes-flask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
Flask = "^3.0.3"
substrate = "^220240617.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
