[tool.poetry]
name = "quotes-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.112.1"}
substrate = "^220240617.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
